feat: transaction_category module (CRUD)
